--- a/joonatan.html
+++ b/joonatan.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Teretulemast Minu Lehele!</h1>
     </header>
 </body>
