--- a/joonatan.html
+++ b/joonatan.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">
+    <div class="header">
         <h1>Teretulemast Minu Lehele!</h1>
-    </header>
+    </div>
+
+    <div class="subheader">
+        <h2>See leht keskendub puhtalt minule</h2>
+    </div>
 </body>
