--- a/joonatan.html
+++ b/joonatan.html
@@ -14,4 +14,10 @@
     <div class="subheader">
         <h2>See leht keskendub puhtalt minule</h2>
     </div>
+
+    <div class="Sissejuhatus">
+    <p>Tere!</p>
+    <p>Minu nimi on Joonatan ja siin lehel ma natukene räägin endast.</p>
+    <p>Kus kohast ma pärit olen? Pärnu kandist.</p>
+        
 </body>
