täiustatud html kus ma räägin endast.

--- a/joonatan.html
+++ b/joonatan.html
@@ -18,6 +18,30 @@
     <div class="Sissejuhatus">
     <p>Tere!</p>
     <p>Minu nimi on Joonatan ja siin lehel ma natukene räägin endast.</p>
-    <p>Kus kohast ma pärit olen? Pärnu kandist.</p>
+    </div>
+
+    <div class="content"> 
+        <h2>Kes ma üldse olen? </h2>
+        <p>Olen 20-aastane tudeng Pärnust. Õpin hetkel Tartu Ülikoolis informaatikat.
+            Vabal ajal käin trennis, skrollin sotsiaalmeediat ja õpin. </p>
+    </div>
         
-</body>
+    <div class="content"> 
+        <h2>Miks ma informaatikat õpin? </h2>
+        <p>Olen lapsepõlvest saati olnud väga huvitatud arvutitest, sest nendega saab videomänge mängida ja keskkooli minu jaoks oli see peamine ajaviide.
+            Selle tõttu otsustasin ka hiljem informaatikat õppima tulla, et saada rohkem teadmisi arvutite kohta ning tulevikus leida endale hea töökoht IT valdkonnas. </p>
+        <p>Peamine huviala on informaatikas küberturvalisus, kuna see valdkond on minu jaoks väga põnev ja pakub palju väljakutseid.</p>
+
+    </div>
+
+    <div class="content"> 
+        <h2>Suvalised faktid minu kohta</h2>
+        <ul>
+            <li>Õppisin Pärnu Sütevaka Humanitaargümnaasiumis</li>
+            <li>Olen tegelenud järgnevate spordialadega: jalgpall, murdmaa suusatamine, kergejõustik ja võrkpall.</li>
+            <li>Käisin jalgpallis ka talenditrennis.</li>
+            <li>Olen õppinud 7 aastat muusikakoolis klarnetit.</li>
+            <li>Lemmik videomängud on CS 2 ja League of Legends.</li>
+        </ul>
+    </div>
+ </body>
