Muutsin html-i ja css-i sisu(eemaldasin .sissejuhatuse)

--- a/joonatan.html
+++ b/joonatan.html
@@ -15,8 +15,8 @@
         <h2>See leht keskendub puhtalt minule</h2>
     </div>
 
-    <div class="Sissejuhatus">
-    <p>Tere!</p>
+    <div class="content">
+    <h2>Tere!</h2>
     <p>Minu nimi on Joonatan ja siin lehel ma natukene räägin endast.</p>
     </div>
 
@@ -38,7 +38,7 @@
         <h2>Suvalised faktid minu kohta</h2>
         <ul>
             <li>Õppisin Pärnu Sütevaka Humanitaargümnaasiumis</li>
-            <li>Olen tegelenud järgnevate spordialadega: jalgpall, murdmaa suusatamine, kergejõustik ja võrkpall.</li>
+            <li>Olen tegelenud järgnevate spordialadega: jalgpall, murdmaasuusatamine, kergejõustik ja võrkpall.</li>
             <li>Käisin jalgpallis ka talenditrennis.</li>
             <li>Olen õppinud 7 aastat muusikakoolis klarnetit.</li>
             <li>Lemmik videomängud on CS 2 ja League of Legends.</li>
