Peaaegu valma, hommikul viimased pingutused

--- a/karl.html
+++ b/karl.html
@@ -24,18 +24,27 @@
         Kuna teistel vahelehtel olete õppinud tundma Tristanit ja Joonatani, siis siin saate mind natuke tundma õppida.<br>
         Alustame?</p> 
         
-        <div class="subheader">
-            <h2>Kust ja mis?</h2>
-        </div>
         <div class="Päritolu">
-           <p>Mina olen pisikest Kesk-Eesti linnast nimega Põltsamaa, mis on Eesti veini ja mitteametlik sildade pealinn.<br>
-           Olen terve oma elu elanud Põltsamaal, käinud lasteaias ja 12 aastat koolis.<br>
-           Koolis käisin Põltsamaa Ühisgümnaasiumis, mis mul õnnestus kuidagi medaliga lõpetada.<br> 
-           Ja kes ei tea, siis Põltsamaa on Puhu Risti kõrval, Trartust u 60 km.<br>
+            <h2>Kust ja mis?</h2>
+            <div class="Päritolutekst">
+           <p>Mina olen pisikest Kesk-Eesti linnast nimega Põltsamaa, mis on Eesti veini ja mitteametlik sildade pealinn.
+            Põltsamaa on ka endine Liivimaa kuningriigi pealinn ja siin õmmeldi esimene sinimustvalge lipp.<br>
+           Olen terve oma elu elanud Põltsamaal, käinud lasteaias ja 12 aastat koolis ja tegelenud erinevate hobide ja ringidega.<br>
+           Koolis käisin Põltsamaa Ühisgümnaasiumis, mis mul õnnestus kuidagi hõbemedaliga lõpetada.<br>
+           Põltsamaal on palju teha: <br>
+           - jalutada lossihoovis ja ronida vaatetorni <br>
+                                     - otsida üles kõik 18 silda <br>
+                                     - leida mõni tuttava nimi Sõpruse pargis <br>
+                                     - jalutada mööda promenaadi <br> 
+            Suurde linna elama ei ole vaja tegelikkuses minna - Põltsamaal on kõik eluks vajalik olemas, alates perearsti keskusest, lasteaiast tegutsevast beebi koolikoolist kuni auto kooli, apteekide ja 3 erineva hooldekoduni. Põltsamaal on esindatud kõik toidupoeketid ja on olemas isegi Espak. <br>
+           Ja kes ei tea, siis Põltsamaa on Puhu Risti kõrval, Tartust u 60 km.<br>
            Põtsamaalt lippu hoiab kõrgel kange sinep, kõrremahl ja juust.
            </p>
+            </div>
+            <div class="Päritolupilt">
+            <img src="Põltsamaa.jpg" alt="ok" class="Päritolupilt">
+            </div>      
         </div>
-
 
         <div class="Peale_lõpetamist">
             <div class="Peale_lõpetamistpealkiri">
@@ -49,7 +58,7 @@
             Pull 11 kuud oli - teenisin auojuhist sihturina. Lasin pea kõikidest relvadest, juhatasin vägesid ja rallisin kõikide masinatega, mida Eesti KV meile Jõhvis võimaldas.<br>
             Peale ajateenistust õppisin semestri Arvutitehnikat, lühidalt öeldes, ei meeldinud see, aga sain endale kamba väga toredaid semusid, kellega koos kooliasjadest arutada ja mööda Rüütli tänavat kolistada ja Atso juures õppida.<br>
             Võtsin ühe vaheaasta, et saada selgusele, mida ma tegelikult ikkagi õppida ja teha tahan.<br>
-            Sain selgusele, mida ma õppida tahan ja nüüd olen siin. Seda, mida ma elus teha tahan, ma ikkagi ei oska öelda
+            Sain selgusele, mida ma õppida tahan ja nüüd olen siin. Seda, mida ma elus teha tahan, ma ikkagi ei oska öelda.
             </div>
             </p>
         </div>
@@ -94,7 +103,23 @@
                 </p>
             </div>
         </div>
-
+        
+        <div class="Tulevik">
+            <div class="Tulevikupealkiri">
+                <h2>Mõtistklused tulevikust</h2>
+            </div>
+            <div class="Tulevikutekst">
+                <p>
+                    Ma tulevikust eriti palju ei nõua ja plaanid on suhteliselt lahtised, vaatan jooksvalt.<br>
+                    Esiteks sooviks baka nominaalajaga ära lõpetada, nii heade tulemustega kui võimalik. Kindlasti tahaks minna ka magistrantuuri.
+                    Töö osas sooviks teha midagi, kus saab siduda loovuse ja Informaatika.<br> 
+                    Sooviks ka head füüsilist vormi, ilusat naist, suurt maja, vinget autot, paksu rahakotti, dalmaatsia koera ja Aafrika savanni ühte kaelkirjakut, keda Eestist jälgida ja sponsoreerida ja võib-olla ka külastada.
+                </p>
+            </div>
+            <div class="Tulevikupilt">
+                <img src="tulevikuplaan.png" alt="ok" class="Tulevikupilt">
+            </div>
+        </div>
 
 
 
