Muutsin html-i ja css-i sisu ja lisasin pildid

--- a/joonatan.html
+++ b/joonatan.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="subheader">
-        <h2>See leht keskendub puhtalt minule</h2>
+        <h2>See leht keskendub ühele Tartu Ülikooli informaatikaüliõpilasele – Joonatanile</h2>
     </div>
 
     <div class="content">
@@ -42,6 +42,17 @@
             <li>Käisin jalgpallis ka talenditrennis.</li>
             <li>Olen õppinud 7 aastat muusikakoolis klarnetit.</li>
             <li>Lemmik videomängud on CS 2 ja League of Legends.</li>
+            <li> Lemmik artist hetkel on EsDeeKid</li>
         </ul>
+    </div>
+
+    <div class="pildid-flex">
+        <img src="5230f4670acc779fc11b046dd2f8dcf9.jpeg" alt="pilt1">
+        <img src="IMG_1868.PNG" alt="pilt2">
+
+    </div>
+
+    <div class="content">
+        <h2> Need kaks fotot annavad aimu minu järjekindlusest ja tugevatest tööharjumustest.</h2>
     </div>
  </body>
