--- a/joonatan.html
+++ b/joonatan.html
@@ -42,7 +42,7 @@
             <li>Käisin jalgpallis ka talenditrennis.</li>
             <li>Olen õppinud 7 aastat muusikakoolis klarnetit.</li>
             <li>Lemmik videomängud on CS 2 ja League of Legends.</li>
-            <li> Lemmik artist hetkel on EsDeeKid</li>
+            <li> Lemmik artist hetkel on EsDeeKid.</li>
         </ul>
     </div>
 
