--- a/joonatan.html
+++ b/joonatan.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="subheader">
-        <h2>See leht keskendub ühele Tartu Ülikooli informaatikaüliõpilasele – Joonatanile</h2>
+        <h2>See leht keskendub ühele Tartu Ülikooli informaatika tudengile – Joonatanile</h2>
     </div>
 
     <div class="content">
