--- a/joonatan.html
+++ b/joonatan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joonatan</title>
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="ühine_css.css">
     <link rel="stylesheet" href="joonatancss.css">
 </head>
 
