vist lõplik tristan leht

--- a/tristan.html
+++ b/tristan.html
@@ -13,10 +13,12 @@
     <button id="theme-toggle">🌙</button>
 
     <header>
-        <h1 class="header-title">Tristan</h1>
+        <h1 class="header">Tristan</h1>
         <h2 class="sub-title">Tere! Minu nimi on Tristan Paas ning olen 19-aastane esimese aasta informaatika tudeng Tartus. Kasvasin üless Tallinna juures äärelinnas ning nüüd elan Tartus korteris</h2>
     </header>
-
+        <div class="pildi-hoidja">
+            <img src="tristan_pilt.jpg" alt="Minu pilt" class="pilt" />
+        <div>
     <div class="dropdown-container">
         <details>
             <summary>Miks otsustasin õppida informaatikat?</summary>
