--- a/karl.html
+++ b/karl.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="et">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veebileht</title>
-    <link rel="stylesheet" type="text/css" href="stiil1.css" 
+    <link rel="stylesheet" type="text/css" href="stiil1.css">
+    <link rel="stylesheet" type="text/css" href="ühine_css.css"> 
+ 
 </head>  
 <body>
     
@@ -71,13 +73,13 @@
 
             <div class="Peale_lõpetamistpildid">
                 <div class="Peale_lõpetamistpilt1">
-                    <img src="soomuk.png" class="Peale_lõpetamistpilt1">
+                    <img src="soomuk.png" alt="ok" class="Peale_lõpetamistpilt1">
                 </div>
                 <div class="Peale_lõpetamistpilt2">
-                    <img src="IMG_2272.jpg" class="Peale_lõpetamistpilt2">
+                    <img src="IMG_2272.jpg" alt="ok" class="Peale_lõpetamistpilt2">
                 </div>
                 <div class="Peale_lõpetamistpilt3">
-                    <img src="robot.png" class="Peale_lõpetamistpilt3">
+                    <img src="robot.png" alt="ok" class="Peale_lõpetamistpilt3">
                 </div>
             </div>
         </div>
@@ -130,10 +132,10 @@
         
         <div class="Variapildid">
          <div class="Variapilt1">
-                <img src="IMG_2271.JPG" class="Variapilt1">
+                <img src="IMG_2271.JPG" alt="ok" class="Variapilt1">
                 </div>
                 <div class="Variapilt2">
-                    <img src="kaelkirjajud.png" class="Variapilt2">
+                    <img src="kaelkirjajud.png" alt="ok" class="Variapilt2">
                 </div>
         </div>
         </div>
@@ -150,7 +152,7 @@
                     Esiteks sooviks baka nominaalajaga ära lõpetada, nii heade tulemustega kui võimalik. <br>
                     Kindlasti tahaks minna ka magistrantuuri, aga ei oska veel täpselt öelda kuhu ja mida õppima. <br>
                     Töö osas sooviks teha midagi, kus saab siduda loovuse ja Informaatika.<br> 
-                    Sooviks ka head füüsilist vormi, ilusat naist, suurt maja, vinget autot, paksu rahakotti, dalmaatsia koera ja Aafrika savanni ühte kaelkirjakut, keda Eestist jälgida ja sponsoreerida ja võib-olla ka külastada.
+                    Sooviks ka head füüsilist vormi, ilusat naist, suurt maja, vinget autot, paksu rahakotti, dalmaatsia koera ja Aafrika savanni ühte kaelkirjakut, keda Eestist jälgida, sponsoreerida ja võib-olla ka külastada.
                 </p>
             </div>
             <div class="Tulevikupilt">
