kõik vead lahendatud Tristani lehel

--- a/tristan.html
+++ b/tristan.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="et">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +18,8 @@
         <h2 class="sub-title">Tere! Minu nimi on Tristan Paas ning olen 19-aastane esimese aasta informaatika tudeng Tartus. Kasvasin üless Tallinna juures äärelinnas ning nüüd elan Tartus korteris</h2>
     </header>
         <div class="pildi-hoidja">
-            <img src="tristan_pilt.jpg" alt="Minu pilt" class="pilt" />
-        <div>
+            <img src="tristan_pilt.jpg" alt="Minu pilt" class="pilt" >
+        </div>
     <div class="dropdown-container">
         <details>
             <summary>Miks otsustasin õppida informaatikat?</summary>
@@ -37,11 +38,11 @@
 
         <details>
             <summary>Suvaline fakt minu kohta</summary>
-              <div id="container">
-
-     <button onclick="generateFacts()">Näita fakti</button>
-     <div id="here"></div>
-
-
+            <div id="container">
+                <button onclick="generateFacts()">Näita fakti</button>
+                <div id="here"></div>
+            </div>
+</details>
+</div>
 </body>
 </html>
