--- a/karl.html
+++ b/karl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veebileht</title>
+    <title>Karl</title>
     <link rel="stylesheet" type="text/css" href="stiil1.css">
     <link rel="stylesheet" type="text/css" href="ühine_css.css"> 
  
