Viimase hetke viimased muudatused

--- a/joonatan.html
+++ b/joonatan.html
@@ -31,7 +31,7 @@
         
         <div class="content"> 
             <h2>Miks ma informaatikat õpin? </h2>
-            <p>Olen lapsepõlvest saati olnud väga huvitatud arvutitest, sest nendega saab videomänge mängida ja keskkooli minu jaoks oli see peamine ajaviide.
+            <p>Olen lapsepõlvest saati olnud väga huvitatud arvutitest, sest nendes saab videomänge mängida ja keskkoolis oli see minu jaoks peamine ajaviide.
             Selle tõttu otsustasin ka hiljem informaatikat õppima tulla, et saada rohkem teadmisi arvutite kohta ning tulevikus leida endale hea töökoht IT valdkonnas. </p>
         <p>Peamine huviala on informaatikas küberturvalisus, kuna see valdkond on minu jaoks väga põnev ja pakub palju väljakutseid.</p>
 
@@ -40,7 +40,7 @@
         <div class="content"> 
             <h2>Suvalised faktid minu kohta</h2>
             <ul>
-            <li>Õppisin Pärnu Sütevaka Humanitaargümnaasiumis</li>
+            <li>Õppisin Pärnu Sütevaka Humanitaargümnaasiumis.</li>
             <li>Olen tegelenud järgnevate spordialadega: jalgpall, murdmaasuusatamine, kergejõustik ja võrkpall.</li>
             <li>Käisin jalgpallis ka talenditrennis.</li>
             <li>Olen õppinud 7 aastat muusikakoolis klarnetit.</li>
